backTo Top link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gault&Millau Maroc</title>
+    <meta name="keywords" content="Gault&Millau Maroc, gastronomie marocaine, chefs marocains, restaurants, guide culinaire, cuisine marocaine"/>
+    <meta name="author" content="Gault&Millau Maroc" />
+    <meta property="og:title" content="Gault&Millau Maroc" />
+    <meta property="og:description" content="Le guide gastronomique de référence au Maroc : chefs, restaurants, saveurs et excellence culinaire."/>
   </head>
   <body>
     <div id="root"></div>
